csc416/assignment_6/tests/fail/syntaxerrors/1/PrintSevenBreaks.ram15
class PrintSevenBreaks {
    public static void main(String[] a) {
        println(4 plus 9 divide 3);
    }
}
